--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pandas 
-mlflow==2.2.2
+mlflow==2.20.1
 notebook
 numpy
 scikit-learn
@@ -21,5 +21,7 @@ uvicorn
 elasticsearch
 nest_asyncio
 pymongo
-github
+PyGithub
+markdown
+waitress
 -e .
