--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,6 @@ services:
     volumes:
       - mongodb_data:/data/db
 
-
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.10.1
     container_name: elasticsearch
@@ -42,7 +41,8 @@ services:
       - "9200:9200"
     networks:
       - app-network
-
+    volumes:
+      - elasticsearch_data:/usr/share/elasticsearch/data
 
   kafka:
     image: confluentinc/cp-kafka:latest
@@ -50,12 +50,17 @@ services:
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     depends_on:
       - zookeeper
     networks:
       - app-network
+    volumes:
+      - kafka_data:/var/lib/kafka/data
 
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
@@ -64,6 +69,7 @@ services:
       - "2181:2181"
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
     networks:
       - app-network
 
@@ -75,15 +81,15 @@ services:
     command: mlflow server --backend-store-uri sqlite:///mlflow.db --host 0.0.0.0 --port 5000
     networks:
       - app-network
-
+    volumes:
+      - mlflow_data:/mlflow
 
 volumes:
   mongodb_data:
+  elasticsearch_data:
+  kafka_data:
+  mlflow_data:
 
 networks:
   app-network:
     driver: bridge
-
-
-
-
